--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -1,11 +1,19 @@
 ---
-title: Krachbau – Musicians of Berlin
+title: Krachbau – Listening to the Sounds of Berlin
 layout: page.njk
 permalink: 'index.html'
 ---
 
 <main class="main">
-<a href="/"><h1>{{ data.title }}</h1></a>
+<a class="page__title" href="/"><h1>{{ data.title }}</h1></a>
+<a title="Go to main page" href="/" class="page__title__logo">
+  <img alt="Krachbau Logo" src="/images/krachbau.svg">
+</a>
+<div class="page__description">
+A series of interviews with Berlin-based underground
+musicians. Produced by
+<a href="https://pedalmarkt.com">Pedal Markt.</a>
+</div>
 <h2>Links</h2>
 <ul>
   <li>
@@ -21,7 +29,9 @@ permalink: 'index.html'
     <a href="https://open.spotify.com/show/41mwqxPH4rKRWL1aLp2M8S">Spotify</a>
   </li>
   <li>
-    Google Podcasts (pending verification)
+    <a href="https://podcasts.google.com/feed/aHR0cHM6Ly9rcmFjaGJhdS5jb20vZmVlZC8">
+    Google Podcasts
+    </a>
   </li>
 </ul>
 <h2>Episodes</h2>
