--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -14,6 +14,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{ preview or site.description }}">
   <link rel="alternate" href="{{ data.paths.feed }}" type="application/rss+xml" title="Krachbau Podcast RSS feed">
+
+
+  <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body class="page__body">
   {{ content | safe }}
