--- a/src/layouts/episode.njk
+++ b/src/layouts/episode.njk
@@ -39,19 +39,19 @@ layout: page.njk
 <h4 class="footer__header">Subscribe to Krachbau:</h4>
 <ul class="footer__links">
   <li>
-    <a href="/feed/">RSS Feed</a>
+    <a class="_no-visited" href="/feed/">RSS Feed</a>
   </li>
   <li>
-    <a href="https://podcasts.apple.com/us/podcast/krachbau/id1655391580">Apple Podcasts</a>
+    <a class="_no-visited" href="https://podcasts.apple.com/us/podcast/krachbau/id1655391580">Apple Podcasts</a>
   </li>
   <li>
-    <a href="https://pca.st/62b96qrx">Pocket Casts</a>
+    <a class="_no-visited" href="https://pca.st/62b96qrx">Pocket Casts</a>
   </li>
   <li>
-    <a href="https://open.spotify.com/show/41mwqxPH4rKRWL1aLp2M8S">Spotify</a>
+    <a class="_no-visited" href="https://open.spotify.com/show/41mwqxPH4rKRWL1aLp2M8S">Spotify</a>
   </li>
   <li>
-    <a href="https://podcasts.google.com/feed/aHR0cHM6Ly9rcmFjaGJhdS5jb20vZmVlZC8">
+    <a class="_no-visited" href="https://podcasts.google.com/feed/aHR0cHM6Ly9rcmFjaGJhdS5jb20vZmVlZC8">
     Google Podcasts
     </a>
   </li>
