--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -12,24 +12,24 @@ permalink: 'index.html'
 <div class="page__description">
 A series of interviews with Berlin-based underground
 musicians. Produced by
-<a href="https://pedalmarkt.com">Pedal Markt.</a>
+<a class="_no-visited" href="https://pedalmarkt.com">Pedal Markt.</a>
 </div>
 <h2>Links</h2>
 <ul>
   <li>
-    <a href="/feed/">RSS Feed</a>
+    <a class="_no-visited" href="/feed/">RSS Feed</a>
   </li>
   <li>
-    <a href="https://podcasts.apple.com/us/podcast/krachbau/id1655391580">Apple Podcasts</a>
+    <a class="_no-visited" href="https://podcasts.apple.com/us/podcast/krachbau/id1655391580">Apple Podcasts</a>
   </li>
   <li>
-    <a href="https://pca.st/62b96qrx">Pocket Casts</a>
+    <a class="_no-visited" href="https://pca.st/62b96qrx">Pocket Casts</a>
   </li>
   <li>
-    <a href="https://open.spotify.com/show/41mwqxPH4rKRWL1aLp2M8S">Spotify</a>
+    <a class="_no-visited" href="https://open.spotify.com/show/41mwqxPH4rKRWL1aLp2M8S">Spotify</a>
   </li>
   <li>
-    <a href="https://podcasts.google.com/feed/aHR0cHM6Ly9rcmFjaGJhdS5jb20vZmVlZC8">
+    <a class="_no-visited" href="https://podcasts.google.com/feed/aHR0cHM6Ly9rcmFjaGJhdS5jb20vZmVlZC8">
     Google Podcasts
     </a>
   </li>
