--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,7 +9,7 @@
   --color-text-light: #212121;
   --color-text-medium: hsl(0,0%,7%);
   --color-text-dark: hsl(0,0%,1%);
-  --color-link-visited: #F6358A;
+  --color-link-visited: #F64195;
   --color-link: #F52887;
 }
 
@@ -28,8 +28,12 @@ html {
   max-width: 32em;
 }
 
-.page__body a::visited {
-  color: var(--color-link-visted);
+.page__body a:visited {
+  color: var(--color-link-visited);
+}
+
+.page__body a._no-visited:visited {
+  color: var(--color-link);
 }
 
 .page__body a {
