No color for Pedal Markt link.

--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -12,7 +12,7 @@ permalink: 'index.html'
 <div class="page__description">
 A series of interviews with Berlin-based underground
 musicians. Produced by
-<a class="_no-visited" href="https://pedalmarkt.com">Pedal Markt.</a>
+<a class="_no-color" href="https://pedalmarkt.com">Pedal Markt.</a>
 </div>
 <h2>Links</h2>
 <ul>
